@@ -1,0 +1,3 @@
+# -*- Makefile -*-
+
+pkglibexec_SCRIPTS = geoip_csv_iv0.pl geoip_download.sh
